src/styles/code.css
.token-line {
  display: table-row;
}
.line-num {
  z-index: 10;
}
.line-highlight {
  background: #393939;
}
.insertion-highlight {
  background: #00ffcb33;
}
.insertion-highlight::before {
  left: 0px;
  content: '+';
  padding-left: 5px;
  position: absolute;
}

.deletion-highlight::before {
  left: 0px;
  content: '-';
  padding-left: 5px;
  position: absolute;
}
.deletion-highlight {
  background: #650000;
}

